This fixes issues 171, 172, 173 The top menu bar had too much bottom padding. Mobile had a large gap under it. Accordion links were not firing alignmentShift js.

--- a/sass/partials/_general.scss
+++ b/sass/partials/_general.scss
@@ -161,7 +161,7 @@ img {
   border: 0;
   float: none;
   margin: 0 auto;
-  padding: 5px 0;
+  padding: 3px 0;
   width: 125px;
   @include bp(wide-screens) {
     float: left;
@@ -169,9 +169,6 @@ img {
 }
 #logo img {
   @extend #logo;
-}
-.not-front #content {
-  margin-top: 30px;
 }
 #site-name,
 #site-slogan {
@@ -259,6 +256,7 @@ iframe {
   @include background-image(linear-gradient($gradient-green_light, $gradient-green_dark 90%));
   background-color: $gradient-green_dark;
   height: auto;
+  max-height: 37px;
   margin-bottom: 0;
   padding: 0;
 }
@@ -403,9 +401,6 @@ iframe {
   color: $primary_nav;
 }
 @media all and (max-width: 480px) {
-  .not-front #content {
-    margin-top: 4em;
-  }
   .html #navigation {
     @include zen_clear();
     margin-top: 15px;
