--- a/sass/partials/_search.scss
+++ b/sass/partials/_search.scss
@@ -5,6 +5,7 @@
   display: none;
   height: 25px;
   margin-right: 2%;
+  margin-top: -2px;
   padding: -7px 0 5px;
   width: auto;
   @include bp(wide-screens) {
